Fix overflow issues for columns.

--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ body {
     background-color: rgb(245, 245, 250);
     font-family: 'Raleway', sans-serif;
     color: rgb(80, 80, 80);
+    overflow: hidden;
 }
 
 h1 {
